Fix image labels visibility in dark/black mode
Major refactor of checkElementForThemeExclusion() method to handle 'notheme' class exclusion
- Exclude spans inside specific th-s, update styles ( T269476 )
- Exclude td-s ( T264687 )
- Exclude all elements inside '.equation-box' div ( T268279 )
- Exclude spans inside figcapion ( T279568 )

Update tests

Bug: T279568
Bug: T269476
Bug: T268279
Bug: T264687

--- a/pagelib/src/transform/ThemeTransform.less
+++ b/pagelib/src/transform/ThemeTransform.less
@@ -159,3 +159,14 @@ span.glossary-link-internal {
     background: unset;
   });
 }
+
+figcaption div span {
+  .darkThemesOnly({
+    color: var(--figcaption-text-color);
+    background: unset;
+  });
+}
+
+span.org {
+  color: #fff !important;
+}
