--- a/pagelib/src/transform/Themes.less
+++ b/pagelib/src/transform/Themes.less
@@ -168,6 +168,7 @@ https://phabricator.wikimedia.org/T236137
     --edit-section-link-container-opacity: 0.7;
     --glossary-link-color: var(--primary-text-color);
     --collapse-table-text-color: var(--primary-text-color);
+    --figcaption-text-color: var(--primary-text-color);
 }
 
 .pcs-theme-black {
@@ -195,6 +196,7 @@ https://phabricator.wikimedia.org/T236137
     --edit-section-link-container-opacity: 0.7;
     --glossary-link-color: var(--primary-text-color);
     --collapse-table-text-color: var(--primary-text-color);
+    --figcaption-text-color: var(--primary-text-color);
 }
 
 // Sometimes all the dark themes have the same styling. To minimize CSS size,
